feat: combined template with vm template
